# local-lakehouse-v1

./: .gitignore  .yamllint.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
ADRs/: 0003-data-quality-duckdb.md  0004-phase-3-query-layer.md  0005-phase-4-governance-observability.md  0006-infrastructure-layout.md
apps/: clickhouse.yaml  cloudbeaver.yaml  grafana.yaml  loki.yaml  minio.yaml  nessie.yaml  phase-1-storage.yaml  phase-2-pipeline.yaml  prometheus.yaml  promtail.yaml  secrets.yaml  trino.yaml
argocd/appsets/: local-datalake.yaml
argocd/clusters/: dev.json
argocd/projects/: infrastructure.yaml  local-datalake.yaml
argocd/services/: clickhouse.json  cloudbeaver.json  dagster.json  grafana.json  loki.json  minio.json  nessie.json  prometheus.json  promtail.json  secrets.json  services.json  trino.json
core/: enums.py  riot_client.py  riot_ingestion.py
core/dagster/: assets.py  definitions.py  jobs.py  resources.py  schedules.py
core/settings/: __init__.py  lake_settings.py  minio_settings.py
core/tests/: test_argocd_services.py  test_dlt_settings.py  test_enums.py  test_lake_settings.py  test_minio_settings.py
docs/ADRs/: 0001-phase-1-storage-layer.md  0002-phase-2-pipeline-layer.md  0004-phase-3-query-layer.md  0006-infrastructure-layout.md
helm/minio/: values.yaml
helm/nessie/: values.yaml
infra/: bootstrap.sh  cluster.yaml
scripts/: run_ingestion_demo.py
secrets/: minio-credentials.yaml  seal.sh
soda/: configuration.yml
tests/: test_argocd_services.py
(+49 files in other folders)
